# BaraChat

./: .gitignore  CONVERSATION_HISTORY_FIX.md  DYNAMIC_VOICE_FIX.md  ECHO_TEST_FEATURE.md  FILE_DOWNLOAD_FIX.md  FILE_SHARING_GUIDE.md  FILE_UPLOAD_FEATURE.md  FIXES_APPLIED.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MESSAGE_DISPLAY_FIX.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  VOICE_CHANNELS_GUIDE.md  VOICE_CHANNEL_GUIDE.md  VOICE_TEST_FEATURE.md  WEBSOCKET_FIXES.md  pyproject.toml  requirements.txt
client/: __init__.py  main.py
client/assets/icons/: .gitkeep
client/assets/images/: .gitkeep
client/core/: __init__.py  crypto.py  media.py  network.py
client/gui/: __init__.py  app_window.py  chat_view.py  settings_view.py  voice_panel.py
client/gui/qml/: .gitkeep  main.qml
client/gui/qml/components/: .gitkeep
client/gui/qml/themes/: .gitkeep
client/utils/: __init__.py  logger.py
common/: __init__.py  constants.py  protocol.py
packaging/: build.spec  install_instructions.md
scripts/: gen_selfsigned_cert.sh  run_dev.sh
server/: __init__.py  auth.py  config.py  main.py  models.py  storage.py
server/api/: __init__.py  rest.py  ws_text.py
server/crypto/: __init__.py  e2ee.py
server/utils/: __init__.py  logger.py
server/voice/: __init__.py  sfu_stub.py  signaling.py
tests/: __init__.py  test_client.py  test_crypto.py  test_server.py
